Mobile layout: Room-by-Room section displays 2 columns side-by-side on mobile

--- a/landing.html
+++ b/landing.html
@@ -872,82 +872,82 @@
                 <h2 class="text-4xl font-bold text-vastu-brown mb-4">Room-by-Room Vastu Guide</h2>
                 <p class="text-xl text-vastu-brown">Optimize each space for its specific purpose</p>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
-                <div class="bg-vastu-cream p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('master-bedroom')">
-                    <div class="text-4xl mb-3">🛏️</div>
-                    <h3 class="text-xl font-bold text-vastu-brown mb-2">Master Bedroom</h3>
-                    <p class="text-sm text-vastu-brown mb-3">Best direction: Southwest</p>
-                    <ul class="text-xs text-vastu-brown space-y-1">
+            <div class="grid grid-cols-2 lg:grid-cols-4 gap-3 md:gap-6">
+                <div class="bg-vastu-cream p-3 md:p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('master-bedroom')">
+                    <div class="text-2xl md:text-4xl mb-2 md:mb-3">🛏️</div>
+                    <h3 class="text-sm md:text-xl font-bold text-vastu-brown mb-1 md:mb-2">Master Bedroom</h3>
+                    <p class="text-xs md:text-sm text-vastu-brown mb-2 md:mb-3">Best direction: Southwest</p>
+                    <ul class="text-[10px] md:text-xs text-vastu-brown space-y-0.5 md:space-y-1">
                         <li>✓ Head to North/East</li>
                         <li>✓ Southwest wall support</li>
                         <li>✓ No mirrors facing bed</li>
                     </ul>
                 </div>
-                <div class="bg-vastu-cream p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('kitchen')">
-                    <div class="text-4xl mb-3">🍳</div>
-                    <h3 class="text-xl font-bold text-vastu-brown mb-2">Kitchen</h3>
-                    <p class="text-sm text-vastu-brown mb-3">Best direction: Southeast</p>
-                    <ul class="text-xs text-vastu-brown space-y-1">
+                <div class="bg-vastu-cream p-3 md:p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('kitchen')">
+                    <div class="text-2xl md:text-4xl mb-2 md:mb-3">🍳</div>
+                    <h3 class="text-sm md:text-xl font-bold text-vastu-brown mb-1 md:mb-2">Kitchen</h3>
+                    <p class="text-xs md:text-sm text-vastu-brown mb-2 md:mb-3">Best direction: Southeast</p>
+                    <ul class="text-[10px] md:text-xs text-vastu-brown space-y-0.5 md:space-y-1">
                         <li>✓ Stove in Southeast</li>
                         <li>✓ Face East while cooking</li>
                         <li>✓ Sink in Northeast corner</li>
                     </ul>
                 </div>
-                <div class="bg-vastu-cream p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('puja-room')">
-                    <div class="text-4xl mb-3">🕉️</div>
-                    <h3 class="text-xl font-bold text-vastu-brown mb-2">Prayer Room</h3>
-                    <p class="text-sm text-vastu-brown mb-3">Best direction: Northeast</p>
-                    <ul class="text-xs text-vastu-brown space-y-1">
+                <div class="bg-vastu-cream p-3 md:p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('puja-room')">
+                    <div class="text-2xl md:text-4xl mb-2 md:mb-3">🕉️</div>
+                    <h3 class="text-sm md:text-xl font-bold text-vastu-brown mb-1 md:mb-2">Prayer Room</h3>
+                    <p class="text-xs md:text-sm text-vastu-brown mb-2 md:mb-3">Best direction: Northeast</p>
+                    <ul class="text-[10px] md:text-xs text-vastu-brown space-y-0.5 md:space-y-1">
                         <li>✓ Face East/North</li>
                         <li>✓ Keep clean & peaceful</li>
                         <li>✓ No storage below idols</li>
                     </ul>
                 </div>
-                <div class="bg-vastu-cream p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('living-room')">
-                    <div class="text-4xl mb-3">🛋️</div>
-                    <h3 class="text-xl font-bold text-vastu-brown mb-2">Living Room</h3>
-                    <p class="text-sm text-vastu-brown mb-3">Best direction: North/NE</p>
-                    <ul class="text-xs text-vastu-brown space-y-1">
+                <div class="bg-vastu-cream p-3 md:p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('living-room')">
+                    <div class="text-2xl md:text-4xl mb-2 md:mb-3">🛋️</div>
+                    <h3 class="text-sm md:text-xl font-bold text-vastu-brown mb-1 md:mb-2">Living Room</h3>
+                    <p class="text-xs md:text-sm text-vastu-brown mb-2 md:mb-3">Best direction: North/NE</p>
+                    <ul class="text-[10px] md:text-xs text-vastu-brown space-y-0.5 md:space-y-1">
                         <li>✓ Main door in NE</li>
                         <li>✓ Soafas against walls</li>
                         <li>✓ Bright & airy space</li>
                     </ul>
                 </div>
-                <div class="bg-vastu-cream p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('study')">
-                    <div class="text-4xl mb-3">📚</div>
-                    <h3 class="text-xl font-bold text-vastu-brown mb-2">Study Room</h3>
-                    <p class="text-sm text-vastu-brown mb-3">Best direction: Northeast</p>
-                    <ul class="text-xs text-vastu-brown space-y-1">
+                <div class="bg-vastu-cream p-3 md:p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('study')">
+                    <div class="text-2xl md:text-4xl mb-2 md:mb-3">📚</div>
+                    <h3 class="text-sm md:text-xl font-bold text-vastu-brown mb-1 md:mb-2">Study Room</h3>
+                    <p class="text-xs md:text-sm text-vastu-brown mb-2 md:mb-3">Best direction: Northeast</p>
+                    <ul class="text-[10px] md:text-xs text-vastu-brown space-y-0.5 md:space-y-1">
                         <li>✓ Face East</li>
                         <li>✓ Bookshelf in East/North</li>
                         <li>✓ Good lighting essential</li>
                     </ul>
                 </div>
-                <div class="bg-vastu-cream p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('bathroom')">
-                    <div class="text-4xl mb-3">🚿</div>
-                    <h3 class="text-xl font-bold text-vastu-brown mb-2">Bathroom</h3>
-                    <p class="text-sm text-vastu-brown mb-3">Best direction: West/Northwest</p>
-                    <ul class="text-xs text-vastu-brown space-y-1">
+                <div class="bg-vastu-cream p-3 md:p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('bathroom')">
+                    <div class="text-2xl md:text-4xl mb-2 md:mb-3">🚿</div>
+                    <h3 class="text-sm md:text-xl font-bold text-vastu-brown mb-1 md:mb-2">Bathroom</h3>
+                    <p class="text-xs md:text-sm text-vastu-brown mb-2 md:mb-3">Best direction: West/Northwest</p>
+                    <ul class="text-[10px] md:text-xs text-vastu-brown space-y-0.5 md:space-y-1">
                         <li>✓ Avoid in NE/SE</li>
                         <li>✓ Keep doors closed</li>
                         <li>✓ Ventilation important</li>
                     </ul>
                 </div>
-                <div class="bg-vastu-cream p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('puja-room')">
-                    <div class="text-4xl mb-3">💼</div>
-                    <h3 class="text-xl font-bold text-vastu-brown mb-2">Home Office</h3>
-                    <p class="text-sm text-vastu-brown mb-3">Best direction: North</p>
-                    <ul class="text-xs text-vastu-brown space-y-1">
+                <div class="bg-vastu-cream p-3 md:p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('puja-room')">
+                    <div class="text-2xl md:text-4xl mb-2 md:mb-3">💼</div>
+                    <h3 class="text-sm md:text-xl font-bold text-vastu-brown mb-1 md:mb-2">Home Office</h3>
+                    <p class="text-xs md:text-sm text-vastu-brown mb-2 md:mb-3">Best direction: North</p>
+                    <ul class="text-[10px] md:text-xs text-vastu-brown space-y-0.5 md:space-y-1">
                         <li>✓ Desk facing North</li>
                         <li>✓ Computer in Southeast</li>
                         <li>✓ Chair backed to wall</li>
                     </ul>
                 </div>
-                <div class="bg-vastu-cream p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('dining')">
-                    <div class="text-4xl mb-3">🍽️</div>
-                    <h3 class="text-xl font-bold text-vastu-brown mb-2">Dining Room</h3>
-                    <p class="text-sm text-vastu-brown mb-3">Best direction: West</p>
-                    <ul class="text-xs text-vastu-brown space-y-1">
+                <div class="bg-vastu-cream p-3 md:p-6 rounded-xl shadow-lg cursor-pointer transform transition-all hover:scale-105" onclick="showRoomDetails('dining')">
+                    <div class="text-2xl md:text-4xl mb-2 md:mb-3">🍽️</div>
+                    <h3 class="text-sm md:text-xl font-bold text-vastu-brown mb-1 md:mb-2">Dining Room</h3>
+                    <p class="text-xs md:text-sm text-vastu-brown mb-2 md:mb-3">Best direction: West</p>
+                    <ul class="text-[10px] md:text-xs text-vastu-brown space-y-0.5 md:space-y-1">
                         <li>✓ Table in center</li>
                         <li>✓ Face East while eating</li>
                         <li>✓ Avoid under toilet above</li>
