--- a/landing.html
+++ b/landing.html
@@ -450,7 +450,7 @@
                 <div class="flex flex-col sm:flex-row gap-3 md:gap-4 justify-center items-center px-4">
                     <button onclick="openModal()" class="group w-full sm:w-auto bg-white hover:bg-gradient-to-r hover:from-vastu-gold hover:to-orange-400 text-vastu-brown hover:text-white px-6 md:px-8 py-3 md:py-4 rounded-full text-sm sm:text-base md:text-lg font-bold transition-all duration-300 shadow-2xl hover:shadow-yellow-300/50 transform hover:scale-105 hover:-translate-y-1 relative overflow-hidden">
                         <span class="relative z-10 flex items-center justify-center gap-2">
-                            Get Free Consultation
+                            Get Consultation
                             <span class="group-hover:animate-bounce">✨</span>
                         </span>
                         <div class="absolute inset-0 bg-gradient-to-r from-vastu-gold to-orange-400 opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
@@ -467,12 +467,7 @@
     <section id="consultants" class="py-8 md:py-16 bg-vastu-light">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-10">
-                <h2 class="text-4xl font-bold text-vastu-brown mb-3">About Our Consultants</h2>
-                <p class="text-vastu-brown max-w-3xl mx-auto">
-                    Meet our experienced Vastu experts who have guided thousands of families and businesses
-                    to create harmonious, high-energy spaces. Each consultant brings years of hands-on practice
-                    across residential and commercial projects.
-                </p>
+                <h2 class="text-4xl font-bold text-vastu-brown mb-3">Our Consultants</h2>
             </div>
 
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
