Center 'What is Vastu Easy?' heading on mobile devices

--- a/landing.html
+++ b/landing.html
@@ -561,7 +561,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
                 <div>
-                    <h2 class="text-4xl font-bold text-vastu-brown mb-6">What is Vastu Easy?</h2>
+                    <h2 class="text-4xl font-bold text-vastu-brown mb-6 text-center md:text-left">What is Vastu Easy?</h2>
                     <p class="text-lg text-vastu-brown mb-4">
                         At Vastu Easy, we believe that harmony in life begins with harmony in your space. Our mission is simple — to make Vastu Shastra easy, practical, and accessible for everyone, without the need for complex rituals or demolition.
                     </p>
