--- a/landing.html
+++ b/landing.html
@@ -188,12 +188,12 @@
             <div class="flex justify-between items-center h-14 md:h-16 relative">
                 <!-- Mobile: Centered Logo (only visible on mobile) -->
                 <div class="absolute left-1/2 transform -translate-x-1/2 flex items-center md:hidden z-10">
-                    <div class="text-xl">🏛️</div>
+                    <img src="logo.jpg" alt="Vastu Easy Logo" class="h-10 w-10 object-contain">
                     <h1 class="text-lg font-bold bg-gradient-to-r from-vastu-gold to-vastu-orange bg-clip-text text-transparent ml-2">Vastu Easy</h1>
                 </div>
                 <!-- Desktop: Left Logo -->
                 <div class="hidden md:flex items-center">
-                    <div class="text-xl md:text-2xl">🏛️</div>
+                    <img src="logo.jpg" alt="Vastu Easy Logo" class="h-12 md:h-14 w-12 md:w-14 object-contain">
                     <h1 class="text-lg md:text-2xl font-bold text-vastu-brown ml-2">Vastu Easy</h1>
                 </div>
                 <!-- Invisible spacer on mobile to balance the centered logo -->
@@ -440,7 +440,9 @@
         
         <div class="relative z-10 max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 pt-6 md:pt-8 pb-6 md:pb-16">
             <div class="text-center fade-in">
-                <div class="text-5xl sm:text-6xl md:text-7xl mb-3 md:mb-4 float-animation transform hover:scale-110 transition-transform duration-300 cursor-pointer" style="filter: drop-shadow(0 10px 30px rgba(255,255,255,0.3));">🏛️</div>
+                <div class="mb-3 md:mb-4 float-animation transform hover:scale-110 transition-transform duration-300 cursor-pointer flex justify-center" style="filter: drop-shadow(0 10px 30px rgba(255,255,255,0.3));">
+                    <img src="logo.jpg" alt="Vastu Easy Logo" class="h-28 sm:h-32 md:h-40 lg:h-52 w-auto object-contain">
+                </div>
                 <h1 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold text-white mb-2 md:mb-3 drop-shadow-2xl transform hover:scale-105 transition-transform duration-300 px-2">
                     Harmony Through Vastu Easy
                 </h1>
@@ -1335,7 +1337,7 @@
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
                     <div class="flex items-center mb-4">
-                        <div class="text-3xl">🏛️</div>
+                        <img src="logo.jpg" alt="Vastu Easy Logo" class="h-12 w-12 object-contain">
                         <h3 class="text-2xl font-bold ml-2">Vastu Easy</h3>
                     </div>
                     <p class="text-vastu-cream">
@@ -1380,7 +1382,6 @@
     <!-- Sticky Animated Consultation Button -->
     <div class="fixed bottom-24 right-8 z-50">
         <button onclick="openModal()" class="animated-consultation-btn text-vastu-brown px-6 py-4 rounded-full font-bold text-base md:text-lg shadow-2xl transition-all duration-300 flex items-center gap-2 whitespace-nowrap">
-            <span class="text-2xl" style="animation: spin 3s linear infinite;">🏛️</span>
             <span>Book Your Vastu Consultation Now</span>
             <span class="text-xl animate-bounce">✨</span>
         </button>
