Increase size of Get Consultation button for better visibility

--- a/landing.html
+++ b/landing.html
@@ -450,7 +450,7 @@
                     Transform your space into a sanctuary of positive energy, prosperity, and peace
                 </p>
                 <div class="flex flex-col sm:flex-row gap-3 md:gap-4 justify-center items-center px-4">
-                    <button onclick="openModal()" class="group w-full sm:w-auto bg-gradient-to-r from-vastu-teal to-vastu-sage hover:from-vastu-sage hover:to-vastu-teal text-white px-6 md:px-8 py-3 md:py-4 rounded-full text-sm sm:text-base md:text-lg font-bold transition-all duration-300 shadow-2xl hover:shadow-orange-300/50 transform hover:scale-105 hover:-translate-y-1 relative overflow-hidden">
+                    <button onclick="openModal()" class="group w-full sm:w-auto bg-gradient-to-r from-vastu-teal to-vastu-sage hover:from-vastu-sage hover:to-vastu-teal text-white px-8 md:px-12 py-4 md:py-6 rounded-full text-base sm:text-lg md:text-xl font-bold transition-all duration-300 shadow-2xl hover:shadow-orange-300/50 transform hover:scale-105 hover:-translate-y-1 relative overflow-hidden">
                         <span class="relative z-10 flex items-center justify-center gap-2">
                             Get Consultation
                             <span class="group-hover:animate-bounce">✨</span>
