--- a/landing.html
+++ b/landing.html
@@ -460,6 +460,11 @@
                         Learn More
                     </button>
                 </div>
+                <div class="mt-8 md:mt-12 text-center px-4">
+                    <p class="text-lg md:text-xl lg:text-2xl font-semibold text-vastu-brown opacity-90">
+                        India's First online platform to choose your vastu consultant
+                    </p>
+                </div>
             </div>
         </div>
     </div>
