Increase tagline text size and enhance Get Consultation button with better styling and animations

--- a/landing.html
+++ b/landing.html
@@ -450,18 +450,19 @@
                     Transform your space into a sanctuary of positive energy, prosperity, and peace
                 </p>
                 <div class="flex flex-col sm:flex-row gap-3 md:gap-4 justify-center items-center px-4">
-                    <button onclick="openModal()" class="group w-full sm:w-auto bg-gradient-to-r from-vastu-teal to-vastu-sage hover:from-vastu-sage hover:to-vastu-teal text-white px-8 md:px-12 py-4 md:py-6 rounded-full text-base sm:text-lg md:text-xl font-bold transition-all duration-300 shadow-2xl hover:shadow-orange-300/50 transform hover:scale-105 hover:-translate-y-1 relative overflow-hidden">
-                        <span class="relative z-10 flex items-center justify-center gap-2">
+                    <button onclick="openModal()" class="group w-full sm:w-auto bg-gradient-to-r from-vastu-teal via-vastu-orange to-vastu-sage hover:from-vastu-sage hover:via-vastu-amber hover:to-vastu-teal text-white px-10 md:px-16 py-5 md:py-7 rounded-full text-lg sm:text-xl md:text-2xl font-extrabold transition-all duration-300 shadow-2xl hover:shadow-orange-400/60 transform hover:scale-110 hover:-translate-y-2 relative overflow-hidden border-2 border-white/20 hover:border-white/40">
+                        <span class="relative z-10 flex items-center justify-center gap-3">
                             Get Consultation
-                            <span class="group-hover:animate-bounce">✨</span>
+                            <span class="group-hover:animate-bounce text-2xl">✨</span>
                         </span>
+                        <div class="absolute inset-0 bg-gradient-to-r from-transparent via-white/20 to-transparent -translate-x-full group-hover:translate-x-full transition-transform duration-1000"></div>
                     </button>
                     <button onclick="scrollToLearnMore()" class="w-full sm:w-auto bg-white hover:bg-vastu-light border-2 border-vastu-teal text-vastu-teal hover:text-vastu-brown px-6 md:px-8 py-3 md:py-4 rounded-full text-sm sm:text-base md:text-lg font-bold transition-all duration-300 shadow-xl hover:shadow-lg transform hover:scale-105">
                         Learn More
                     </button>
                 </div>
                 <div class="mt-8 md:mt-12 text-center px-4">
-                    <p class="text-lg md:text-xl lg:text-2xl font-semibold text-vastu-brown opacity-90">
+                    <p class="text-xl md:text-3xl lg:text-4xl font-bold text-vastu-brown opacity-95 leading-tight">
                         India's First online platform to choose your vastu consultant
                     </p>
                 </div>
