Add amount field to initial form submission for consistency

--- a/landing.html
+++ b/landing.html
@@ -1679,6 +1679,8 @@
                     phone: document.getElementById('form-phone').value,
                     dob: document.getElementById('form-dob').value,
                     questions: document.getElementById('form-questions').value,
+                    amount: '2100.00',
+                    paymentMethod: 'N/A',
                     status: 'Form Submitted - Payment Pending'
                 };
 
