Update contact email and phone number: annglobal08@gmail.com and +91 8368506337

--- a/landing.html
+++ b/landing.html
@@ -1371,8 +1371,8 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">Contact Us</h4>
                     <ul class="space-y-2 text-vastu-cream">
-                        <li>📧 info@vastuwisdom.com</li>
-                        <li>📱 +91 98765 43210</li>
+                        <li>📧 annglobal08@gmail.com</li>
+                        <li>📱 +91 8368506337</li>
                         <li>📍 Office Address</li>
                         <li>🕐 Mon-Sat: 9 AM - 7 PM</li>
                     </ul>
