--- a/payu-success.html
+++ b/payu-success.html
@@ -65,7 +65,7 @@
                 Our team will contact you shortly at the phone number and email you provided to schedule your consultation.
             </p>
             <p class="text-sm text-gray-600">
-                For any queries, please contact us at <a href="tel:+919873182466" class="text-vastu-teal hover:underline">+91 98731 82466</a>
+                For any queries, please contact us at <a href="tel:+918368506337" class="text-vastu-teal hover:underline">+91 8368506337</a>
             </p>
         </div>
 
