Revert PayU pages contact phone - keep only footer changes in landing.html

--- a/payu-failure.html
+++ b/payu-failure.html
@@ -78,7 +78,7 @@
                 If you continue to face issues, please contact our support team for assistance.
             </p>
             <p class="text-sm text-gray-600">
-                Contact us at <a href="tel:+918368506337" class="text-vastu-teal hover:underline font-semibold">+91 8368506337</a>
+                Contact us at <a href="tel:+919873182466" class="text-vastu-teal hover:underline font-semibold">+91 98731 82466</a>
             </p>
         </div>
 
