--- a/landing.html
+++ b/landing.html
@@ -1796,9 +1796,11 @@
 
             try {
                 // Save payment data
-                const saveEndpoint = (location.hostname.includes('netlify.app') || location.hostname.includes('vercel.app'))
-                  ? '/.netlify/functions/save-to-sheets'
-                  : 'http://localhost:5055/save-form';
+                // Check if running on localhost - if not, use Netlify Functions
+                const isLocalhost = location.hostname === 'localhost' || location.hostname === '127.0.0.1';
+                const saveEndpoint = isLocalhost
+                  ? 'http://localhost:5055/save-form'
+                  : '/.netlify/functions/save-to-sheets';
                 
                 fetch(saveEndpoint, {
                     method: 'POST',
@@ -1813,9 +1815,11 @@
 
             try {
                 // Choose hash endpoint: use Netlify Function in production, local server in dev
-                const hashEndpoint = (location.hostname.includes('netlify.app') || location.hostname.includes('vercel.app'))
-                  ? '/.netlify/functions/payu-hash'
-                  : 'http://localhost:5055/payu/hash';
+                // Check if running on localhost - if not, use Netlify Functions
+                const isLocalhost = location.hostname === 'localhost' || location.hostname === '127.0.0.1';
+                const hashEndpoint = isLocalhost
+                  ? 'http://localhost:5055/payu/hash'
+                  : '/.netlify/functions/payu-hash';
                 const resp = await fetch(hashEndpoint, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
