Update consultants section: Add images and update names to Dr. Bhaskar Das, Acharya Ashish Gambhir, Vastu Parul Aggarwal, and Acharya Chetna

--- a/landing.html
+++ b/landing.html
@@ -479,33 +479,41 @@
 
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
                 <div class="bg-white rounded-2xl shadow-md border border-gray-100 overflow-hidden">
-                    <div class="h-32 md:h-48 bg-gray-100"></div>
+                    <div class="h-32 md:h-48 bg-gray-100 overflow-hidden">
+                        <img src="BHASKAR DAS.png" alt="Dr. Bhaskar Das" class="w-full h-full object-cover">
+                    </div>
                     <div class="p-3 md:p-5">
-                        <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Dr. Kavita Sharma</h3>
+                        <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Dr. Bhaskar Das</h3>
                         <p class="text-xs md:text-sm text-gray-600 mt-1">15+ yrs | Residential & Wellness</p>
                         <div class="text-amber-500 mt-2 text-xs md:text-sm">★★★★★</div>
                     </div>
                 </div>
                 <div class="bg-white rounded-2xl shadow-md border border-gray-100 overflow-hidden">
-                    <div class="h-32 md:h-48 bg-gray-100"></div>
+                    <div class="h-32 md:h-48 bg-gray-100 overflow-hidden">
+                        <img src="ASHISH.png" alt="Acharya Ashish Gambhir" class="w-full h-full object-cover">
+                    </div>
                     <div class="p-3 md:p-5">
-                        <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Rajiv Mehta</h3>
+                        <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Acharya Ashish Gambhir</h3>
                         <p class="text-xs md:text-sm text-gray-600 mt-1">12+ yrs | Commercial Planning</p>
                         <div class="text-amber-500 mt-2 text-xs md:text-sm">★★★★★</div>
                     </div>
                 </div>
                 <div class="bg-white rounded-2xl shadow-md border border-gray-100 overflow-hidden">
-                    <div class="h-32 md:h-48 bg-gray-100"></div>
+                    <div class="h-32 md:h-48 bg-gray-100 overflow-hidden">
+                        <img src="PARUL .png" alt="Vastu Parul Aggarwal" class="w-full h-full object-cover">
+                    </div>
                     <div class="p-3 md:p-5">
-                        <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Anjali Desai</h3>
+                        <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Vastu Parul Aggarwal</h3>
                         <p class="text-xs md:text-sm text-gray-600 mt-1">10+ yrs | Interior Alignment</p>
                         <div class="text-amber-500 mt-2 text-xs md:text-sm">★★★★★</div>
                     </div>
                 </div>
                 <div class="bg-white rounded-2xl shadow-md border border-gray-100 overflow-hidden">
-                    <div class="h-32 md:h-48 bg-gray-100"></div>
+                    <div class="h-32 md:h-48 bg-gray-100 overflow-hidden">
+                        <img src="CHETNA JI.png" alt="Acharya Chetna" class="w-full h-full object-cover">
+                    </div>
                     <div class="p-3 md:p-5">
-                        <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Suresh Nair</h3>
+                        <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Acharya Chetna</h3>
                         <p class="text-xs md:text-sm text-gray-600 mt-1">9+ yrs | New Constructions</p>
                         <div class="text-amber-500 mt-2 text-xs md:text-sm">★★★★★</div>
                     </div>
