Standardize consultant image positioning to ensure consistent framing and visible heads

--- a/landing.html
+++ b/landing.html
@@ -480,7 +480,7 @@
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6">
                 <div class="bg-white rounded-2xl shadow-md border border-gray-100 overflow-hidden">
                     <div class="h-32 md:h-48 bg-gray-100 overflow-hidden">
-                        <img src="BHASKAR DAS.png" alt="Dr. Bhaskar Das" class="w-full h-full object-cover">
+                        <img src="BHASKAR DAS.png" alt="Dr. Bhaskar Das" class="w-full h-full object-cover" style="object-position: center 60%;">
                     </div>
                     <div class="p-3 md:p-5">
                         <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Dr. Bhaskar Das</h3>
@@ -490,7 +490,7 @@
                 </div>
                 <div class="bg-white rounded-2xl shadow-md border border-gray-100 overflow-hidden">
                     <div class="h-32 md:h-48 bg-gray-100 overflow-hidden">
-                        <img src="ASHISH.png" alt="Acharya Ashish Gambhir" class="w-full h-full object-cover">
+                        <img src="ASHISH.png" alt="Acharya Ashish Gambhir" class="w-full h-full object-cover" style="object-position: center 60%;">
                     </div>
                     <div class="p-3 md:p-5">
                         <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Acharya Ashish Gambhir</h3>
@@ -500,7 +500,7 @@
                 </div>
                 <div class="bg-white rounded-2xl shadow-md border border-gray-100 overflow-hidden">
                     <div class="h-32 md:h-48 bg-gray-100 overflow-hidden">
-                        <img src="PARUL .png" alt="Vastu Parul Aggarwal" class="w-full h-full object-cover">
+                        <img src="PARUL .png" alt="Vastu Parul Aggarwal" class="w-full h-full object-cover" style="object-position: center 60%;">
                     </div>
                     <div class="p-3 md:p-5">
                         <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Vastu Parul Aggarwal</h3>
@@ -510,7 +510,7 @@
                 </div>
                 <div class="bg-white rounded-2xl shadow-md border border-gray-100 overflow-hidden">
                     <div class="h-32 md:h-48 bg-gray-100 overflow-hidden">
-                        <img src="CHETNA JI.png" alt="Acharya Chetna" class="w-full h-full object-cover">
+                        <img src="CHETNA JI.png" alt="Acharya Chetna" class="w-full h-full object-cover" style="object-position: center 60%;">
                     </div>
                     <div class="p-3 md:p-5">
                         <h3 class="font-semibold text-vastu-brown text-sm md:text-base">Acharya Chetna</h3>
